--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
       "source": "/backend/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "https://projectfrontend-fawn.vercel.app" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS,PUT,DELETE" },
         { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
         { "key": "Access-Control-Allow-Credentials", "value": "true" }
       ]
