--- a/vercel.json
+++ b/vercel.json
@@ -9,14 +9,25 @@
     "routes": [
         {
             "src": "/backend/(.*)",
-            "dest": "/backend/index.js",
-              "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": { 
-        "Access-Control-Allow-Origin": "*"
-      }
+            "dest": "/backend/index.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/backend/index.js"
         }
-     
+    ]
+
+ ,
+  "headers": [
+    {
+      "source": "/backend/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://projectfrontend-fawn.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS,PUT,DELETE" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
+    }
   ]
-    
 
 }
